# kcio

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
cli/: kcplay.c  kcrec.c  kcsend.c  kcterm.c
kc-control/: main.cc
kc-keyboard/: controller.cc  controller.h  devicepool.cc  devicepool.h  inputwindow.cc  inputwindow.h  main.cc  serialport.cc  serialport.h
libkc/: charset.c  cmdline.c  kctape.c  libkc.h  v24boost.asm
libkcui/: aboutdialog.cc  appdata.cc  libkcui.h
m4/: dk-pkgprog.m4
src/: .gitignore  main.cc
src/cli/: kcplay.c  kcrec.c  kcsend.c  kcterm.c
src/kckeyb/: controller.cc  controller.h  inputwindow.cc  inputwindow.h  main.cc  serialport.cc  serialport.h
src/libkc/: appdata.cc  charset.c  libkc.h  libkcui.h
ui/: kc-control.desktop.in  kc-control.glade  kc-keyboard.desktop.in  kckeyb.desktop.in  kcmill.desktop.in  kcmill.glade  keymap.conf
